# Dynamics-processor

./: .gitignore.7z  CMakeLists.txt  Dynamics processor.sln  NoiseGate User manual.md  NoiseGate_usage_v1.1.md  README.md  testNoiseGate.sln
Dynamics processor cmake project/: CMakeLists.txt  Dynamics processor test.cpp
Dynamics processor cmake project/nonlinear_processor/: CMakeLists.txt  NoiseGate.c  NoiseGate.h
Dynamics processor cmake project/wavfile/: CMakeLists.txt  wavfile.c  wavfile.h
Dynamics processor test/: CMakeLists.txt  Dynamics processor test.cpp  Dynamics processor test.h  NoiseGate.h
DynamicsProcessorUintTest/: DynamicsProcessorUintTest.cpp  DynamicsProcessorUintTest.h  DynamicsProcessorUintTest.vcxproj  DynamicsProcessorUintTest.vcxproj.filters  compressor.h  peak_limiter.h  rms_limiter.h
testNoiseGate/: stdafx.cpp  testNoiseGate.cpp  testNoiseGate.vcxproj  testNoiseGate.vcxproj.filters
testNoiseGate/assets/: remead.txt
testNoiseGate/include/: NoiseGate.h
